--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="D:/TrainingProjects/SeleniumJavaFrameworkBatch-1/Lib/jxl-2.6.jar"/>
+	<classpathentry kind="lib" path="D:/EclipseAutomation/SeleniumJavaBatch_3/Lib/selenium-server-4.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
